packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/Pulse_Library_Bundle__c.object-meta.xml
<CustomObject>
    <label>Pulse Library Bundle</label>
    <pluralLabel>Pulse Library Bundles</pluralLabel>
    <nameField>
        <label>Bundle Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks installed workflow bundles from trusted publishers, supporting versioning and rollback.</description>
</CustomObject>