packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Bundle_JSON__c.field-meta.xml
<CustomField>
    <fullName>Bundle_JSON__c</fullName>
    <label>Bundle JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>