packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Bundle_Key__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Key__c</fullName>
    <label>Bundle Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <externalId>true</externalId>
</CustomField>