packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Dependencies_JSON__c.field-meta.xml
<CustomField>
    <fullName>Dependencies_JSON__c</fullName>
    <label>Dependencies JSON</label>
    <type>LongTextArea</type>
    <length>8192</length>
</CustomField>