packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>