packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Installed_By__c.field-meta.xml
<CustomField>
    <fullName>Installed_By__c</fullName>
    <label>Installed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Installed Library Bundles</relationshipLabel>
    <relationshipName>Installed_Library_Bundles</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>