packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>Installed_Date__c</fullName>
    <label>Installed Date</label>
    <type>DateTime</type>
</CustomField>