packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Previous_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Previous_Bundle__c</fullName>
    <label>Previous Bundle</label>
    <type>Lookup</type>
    <referenceTo>Pulse_Library_Bundle__c</referenceTo>
    <relationshipLabel>Superseded By</relationshipLabel>
    <relationshipName>Superseded_By</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>