packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Public_Key_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Public_Key_Fingerprint__c</fullName>
    <label>Public Key Fingerprint</label>
    <type>Text</type>
    <length>80</length>
</CustomField>