packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Publisher_Id__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Id__c</fullName>
    <label>Publisher Id</label>
    <type>Text</type>
    <length>80</length>
</CustomField>