packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Signature_B64__c.field-meta.xml
<CustomField>
    <fullName>Signature_B64__c</fullName>
    <label>Signature Base64</label>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>