packages/pulse-core/force-app/main/default/objects/Pulse_Library_Bundle__c/fields/Workflow_Definition__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Definition__c</fullName>
    <label>Workflow Definition</label>
    <type>Lookup</type>
    <referenceTo>Workflow_Definition__c</referenceTo>
    <relationshipLabel>Library Bundles</relationshipLabel>
    <relationshipName>Library_Bundles</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>